Fix header overflow and add additional mobile constraints

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -110,6 +110,11 @@ body {
   overflow-x: hidden;
 }
 
+main {
+  width: 100%;
+  overflow-x: hidden;
+}
+
 h1, h2, p {
   margin: 0;
 }
@@ -154,6 +159,8 @@ img {
 .section {
   padding-top: 3rem;
   padding-bottom: 2rem;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 /*===== LAYOUT =====*/
